feat: add adaptive to block welcom

--- a/museum/index.html
+++ b/museum/index.html
@@ -92,8 +92,7 @@
             <div class="wrapper">
                 <div class="wrapper-container">
                     <div class="louvre-container">
-                        <h2 class="louvre-title">Welcome</h2>
-                        <h3 class="louvre-title">to the Louvre</h3>
+                        <h2 class="louvre-title">Welcome </br>to the Louvre</h2>
                         <p class="louvre-subtitle">From the castle to the museum</p>
                         <button class="louvre-button">Discover the Louvre</button>
                     </div>
