--- a/museum/index.html
+++ b/museum/index.html
@@ -94,8 +94,112 @@
                     <div class="louvre-container">
                         <h2 class="louvre-title">Welcome </br>to the Louvre</h2>
                         <p class="louvre-subtitle">From the castle to the museum</p>
-                        <button class="louvre-button">Discover the Louvre</button>
+                        <a href="tours/tours7.html" target="_blank">
+                            <button class="louvre-button">Discover the Louvre</button>
+                        </a>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section class="virtual-tour" id="Visiting">
+            <div class="wrapper">
+                <div class="wrapper-container">
+                    <div class="title-tour">
+                        <h2>Virtual tour</h2>
+                    </div>
+                    <div class="title-line"></div>
+                    <div class="virtual-tour-contaner">
+                        <div class="card-container">
+                            <a href="tours/tours1.html" target="_blank">
+                                <div class="card-container__image">
+                                    <img src="assets/images/jpg/Royal-Palace.jpg" alt="Royal Palace">
+                                </div>
+                                <div class="card-container__title">
+                                    <h3>Royal Palace</h3>
+                                </div>
+                                <div class="card-container__line"></div>
+                                <div class="card-container__subtitle">
+                                    <p>360° Virtual Tour</p>
+                                    <p>Google Street Panorama View</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-container">
+                            <a href="tours/tours2.html" target="_blank">
+                                <div class="card-container__image">
+                                    <img src="assets/images/jpg/Denon-Wing.jpg" alt="Denon Wing">
+                                </div>
+                                <div class="card-container__title">
+                                    <h3>Denon Wing</h3>
+                                </div>
+                                <div class="card-container__line"></div>
+                                <div class="card-container__subtitle">
+                                    <p>360° Virtual Tour</p>
+                                    <p>Google Street Panorama View</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-container">
+                            <a href="tours/tours3.html" target="_blank">
+                                <div class="card-container__image">
+                                    <img src="assets/images/jpg/Colonnade-Perrault.jpg" alt="Colonnade Perrault">
+                                </div>
+                                <div class="card-container__title">
+                                    <h3>Colonnade Perrault</h3>
+                                </div>
+                                <div class="card-container__line"></div>
+                                <div class="card-container__subtitle">
+                                    <p>360° Virtual Tour</p>
+                                    <p>Google Street Panorama View</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-container">
+                            <a href="tours/tours4.html" target="_blank">
+                                <div class="card-container__image">
+                                    <img src="assets/images/jpg/Greek-hall.jpg" alt="Greek hall">
+                                </div>
+                                <div class="card-container__title">
+                                    <h3>Greek hall</h3>
+                                </div>
+                                <div class="card-container__line"></div>
+                                <div class="card-container__subtitle">
+                                    <p>360° Virtual Tour</p>
+                                    <p>Google Street Panorama View</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-container">
+                            <a href="tours/tours5.html" target="_blank">
+                                <div class="card-container__image">
+                                    <img src="assets/images/jpg/Mona-Lisa.jpg" alt="Mona Lisa">
+                                </div>
+                                <div class="card-container__title">
+                                    <h3>Mona Lisa</h3>
+                                </div>
+                                <div class="card-container__line"></div>
+                                <div class="card-container__subtitle">
+                                    <p>360° Virtual Tour</p>
+                                    <p>Google Street Panorama View</p>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="card-container">
+                            <a href="tours/tours6.html" target="_blank">
+                                <div class="card-container__image">
+                                    <img src="assets/images/jpg/Night-Palace.jpg" alt="Night Palace">
+                                </div>
+                                <div class="card-container__title">
+                                    <h3>Night Palace</h3>
+                                </div>
+                                <div class="card-container__line"></div>
+                                <div class="card-container__subtitle">
+                                    <p>360° Virtual Tour</p>
+                                    <p>Google Street Panorama View</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div> 
                 </div>
             </div>
         </section>
