feat: add block explore

--- a/museum/index.html
+++ b/museum/index.html
@@ -203,6 +203,33 @@
                 </div>
             </div>
         </section>
+        <section class="picture-explore" id="Explore">
+            <div class="wrapper">
+                <div class="wrapper-container">
+                    <div class="explore-container">
+                        <div class="explore-main">
+                            <div class="explore-main__title">
+                                <h2>Picture explore</h2>
+                            </div>
+                            <div class="explore-main__line"></div>
+                            <div class="explore-main__subtitle">
+                                <p>Las Meninas is a 1656 painting by Diego Velázquez, the leading artist of the Spanish Golden Age.</p>
+                                <p>It was cleaned in 1984 to remove a <span>"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p>
+                                <p>The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p>
+                            </div>
+                        </div>
+                        <div class="explore-image">
+                            <div class="before">
+                                <div class="after"></div>
+                                <div class="divior"></div>
+                            </div>
+                            <input type="range" min="0" max="100" value="50" id="slider" oninput="moveDivisor()">
+                            <!-- <img src="assets/images/jpg/Picture-explore.jpg" alt="Picture Explore"> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="js/index.js"></script>
 </body>
