fix: add adaptive to block Explore

--- a/museum/index.html
+++ b/museum/index.html
@@ -219,11 +219,13 @@
                             </div>
                         </div>
                         <div class="explore-image">
-                            <div class="before">
-                                <div class="after"></div>
-                                <div class="divior"></div>
+                            <div class="explore-image_container">
+                                <div class="before">
+                                    <img src="assets/images/jpg/Explore/before.jpg" alt="Explore">
+                                    <div class="after"></div>
+                                    <input type="range" min="0" max="100" value="61.11" class="slider" oninput="moveAfter()">
+                                </div>
                             </div>
-                            <input type="range" min="0" max="100" value="50" id="slider" oninput="moveDivisor()">
                             <!-- <img src="assets/images/jpg/Picture-explore.jpg" alt="Picture Explore"> -->
                         </div>
                     </div>
