feat: add block video

--- a/museum/index.html
+++ b/museum/index.html
@@ -226,7 +226,40 @@
                                     <input type="range" min="0" max="100" value="61.11" class="slider" oninput="moveAfter()">
                                 </div>
                             </div>
-                            <!-- <img src="assets/images/jpg/Picture-explore.jpg" alt="Picture Explore"> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="vidio-journey" id="Video">
+            <div class="wrapper">
+                <div class="wrapper-container">
+                    <div class="text-container">
+                        <div class="text-title">
+                            <h2>Video journey</h2>
+                        </div>
+                        <div class="text-subtitle">
+                            <p>Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
+                        </div>
+                    </div>
+                    <div class="vidio-container">
+                        <div class="vidio">
+                            <button class="main-start-vidio">
+                                <img src="assets/svg/start.svg" alt="Start">
+                            </button>
+                        </div>
+                        <div class="adjustment">
+                            <button class="start">
+                                <img src="assets/svg/start-m.svg" alt="Start">
+                            </button>
+                            <input type="range" value="47" min="0" max="100" step="1" class="move-line">
+                            <button class="microphone">
+                                <img src="assets/svg/mircophone.svg" alt="Volume">
+                            </button>
+                            <input type="range" value="43" min="0" max="100" step="1" class="volume-line">
+                            <button class="full">
+                                <img src="assets/svg/full.svg" alt="Full screen">
+                            </button>
                         </div>
                     </div>
                 </div>
