feat: create form

--- a/museum/index.html
+++ b/museum/index.html
@@ -405,7 +405,7 @@
                         </div>
                     </div>
                     <div class="booking-tickets">
-                        <div class="booking-container">
+                        <form class="booking-container" action="#" method="POST">
                             <div class="booking-container__left left-container">
                                 <div class="left-container__header">
                                     <div class="logo">
@@ -419,7 +419,7 @@
                                     </div>
                                     <div class="line"></div>
                                 </div>
-                                <form action="#" class="left-form" method="POST">
+                                <div class="left-form">
                                     <div class="item-data">
                                         <div class="data-container">
                                             <select name="Data" class="data">
@@ -488,10 +488,25 @@
                                             </div>
                                         </div>
                                     </div>
-                                </form>
+                                </div>
                             </div>
-                            <div class="booking-container__right"></div>
-                        </div>
+                            <div class="booking-container__right">
+                                <div class="booking-container__right-wrapper">
+                                    <div class="booking-item__top">
+                                        <div class="item-top-main">
+                                            <h3 class="title">Overview</h3>
+                                            <p class="subtitle">Tour to Louvre</p>
+                                            <p class="subtitle-item item1">Friday, August 19</p>
+                                            <p class="subtitle-item item2">16 : 30</p>
+                                            <p class="subtitle-item item3">Temporary exhibition</p>
+                                        </div>
+                                        <div class="item-top-img">
+                                            <img src="assets/images/jpg/Booking/background.jpg" alt="Background">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -499,7 +514,7 @@
         <section class="parallax">
             <div class="parallax-conteiner"></div>
         </section>
-        <section class="contacts" id="Contacts"> -->
+        <section class="contacts" id="Contacts">
             <div class="wrapper">
                 <div class="wrapper-container">
                     <div class="contacts-title">
@@ -548,10 +563,10 @@
                         </div>
                         <nav class="container-navigation">
                             <ul class="navigation-container">
-                                <li class="navigation-container__item welcom"><a href="#Welcome">Welcome</a></li>
-                                <li class="navigation-container__item visiting"><a href="#Visiting">Visiting</a></li>
-                                <li class="navigation-container__item explore"><a href="#Explore">Explore</a></li>
-                                <li class="navigation-container__item vidio"><a href="#Video">Video</a></li>
+                                <li class="navigation-container__item welcom"><a href="#Visiting">Visiting</a></li>
+                                <li class="navigation-container__item visiting"><a href="#Explore">Explore</a></li>
+                                <li class="navigation-container__item explore"><a href="#Video">Video</a></li>
+                                <li class="navigation-container__item vidio"><a href="#Gallery">Gallery</a></li>
                                 <li class="navigation-container__item tickets"><a href="#Tickets">Tickets</a></li>
                                 <li class="navigation-container__item contacts"><a href="#Contacts">Contacts</a></li>
                             </ul>
