fix: add hover to elements

--- a/museum/index.html
+++ b/museum/index.html
@@ -82,7 +82,7 @@
                                 <button class="arrow-left arrow">
                                     <img src="assets/images/svg/arrow-left.svg" alt="Arrow left">
                                 </button>
-                                <butto class="arrow-right arrow">
+                                <button class="arrow-right arrow">
                                     <img src="assets/images/svg/arrow-right.svg" alt="Arrow-right">
                                 </button>
                             </div>
@@ -93,11 +93,9 @@
             <div class="wrapper">
                 <div class="wrapper-container">
                     <div class="louvre-container">
-                        <h2 class="louvre-title">Welcome </br>to the Louvre</h2>
+                        <h2 class="louvre-title">Welcome <br>to the Louvre</h2>
                         <p class="louvre-subtitle">From the castle to the museum</p>
-                        <a href="tours/tours7.html" target="_blank">
-                            <button class="louvre-button">Discover the Louvre</button>
-                        </a>
+                        <button class="louvre-button"><a href="tours/tours7.html" target="_blank">Discover the Louvre</a></button>
                     </div>
                 </div>
             </div>
@@ -384,7 +382,7 @@
                                         <h4>Basic 18+</h4>
                                         <div class="amount-container__block">
                                             <button class="button-amount" onclick="this.nextElementSibling.stepDown()">–</button>
-                                            <input type="number" min="0" max="100" value="1" readonly class="amount-item">
+                                            <input type="number" min="0" max="20" value="1" readonly class="amount-item">
                                             <button class="button-amount" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </div>
@@ -392,7 +390,7 @@
                                         <h4>Senior 65+</h4>
                                         <div class="amount-container__block">
                                             <button class="button-amount" onclick="this.nextElementSibling.stepDown()">–</button>
-                                            <input type="number" min="0" max="100" value="1" readonly class="amount-item">
+                                            <input type="number" min="0" max="200" value="1" readonly class="amount-item">
                                             <button class="button-amount" onclick="this.previousElementSibling.stepUp()">+</button>
                                         </div>
                                     </div>
@@ -641,8 +639,8 @@
                 <div class="footer-bottom-container">
                     <div class="bottom-content">
                         <p>© 2021</p>
-                        <p>The Rolling Scopes School</p>
-                        <p>Bogdan-VS</p>
+                        <p><a href="https://rs.school/js/" target="_blank">The Rolling Scopes School</a></p>
+                        <p><a href="https://github.com/Bogdan-VS" target="_blank">Bogdan-VS</a></p>
                     </div>
                 </div>
             </div>
