--- a/museum/index.html
+++ b/museum/index.html
@@ -589,7 +589,7 @@
                             </div>
                             <div class="contacts-content__subtitle">
                                 <span>phone:</span>
-                                <a href="tel:+33(0) 1 40 20 50 50" target="_blank">+33(0) 1 40 20 50 50</a>
+                                <a href="tel:+33(0)140205050" target="_blank">+33(0) 1 40 20 50 50</a>
                             </div>
                             <div class="contacts-content__subtitle">
                                 <span>mail:</span>
