--- a/museum/index.html
+++ b/museum/index.html
@@ -297,51 +297,21 @@
                         </div>
                         <div class="picture-container">
                             <div class="picture-inner-container">
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery2.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery9.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery4.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery6.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery11.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery1.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery8.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery3.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery5.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery13.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery7.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery10.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery15.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery12.jpg" alt="Gallery">
-                                </div>
-                                <div class="picture-item">
-                                    <img src="assets/images/jpg/Gallery/galery14.jpg" alt="Gallery">
-                                </div>
+                                <img src="assets/images/jpg/Gallery/galery2.jpg" alt="Gallery image 2">
+                                <img src="assets/images/jpg/Gallery/galery9.jpg" alt="Gallery image 9">
+                                <img src="assets/images/jpg/Gallery/galery4.jpg" alt="Gallery image 4">
+                                <img src="assets/images/jpg/Gallery/galery6.jpg" alt="Gallery image 6">
+                                <img src="assets/images/jpg/Gallery/galery11.jpg" alt="Gallery image 11">
+                                <img src="assets/images/jpg/Gallery/galery1.jpg" alt="Gallery image 1">
+                                <img src="assets/images/jpg/Gallery/galery8.jpg" alt="Gallery image 8">
+                                <img src="assets/images/jpg/Gallery/galery3.jpg" alt="Gallery image 3">
+                                <img src="assets/images/jpg/Gallery/galery5.jpg" alt="Gallery image 5">
+                                <img src="assets/images/jpg/Gallery/galery13.jpg" alt="Gallery image 13">
+                                <img src="assets/images/jpg/Gallery/galery7.jpg" alt="Gallery image 7">
+                                <img src="assets/images/jpg/Gallery/galery10.jpg" alt="Gallery image 10">
+                                <img src="assets/images/jpg/Gallery/galery15.jpg" alt="Gallery image 15">
+                                <img src="assets/images/jpg/Gallery/galery12.jpg" alt="Gallery image 12">
+                                <img src="assets/images/jpg/Gallery/galery14.jpg" alt="Gallery image 14">
                             </div>
                             <div class="gradient-container"></div>
                         </div>
@@ -650,6 +620,7 @@
         </div>
     </footer>
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="js/gallery.js"></script>
     <script src="js/index.js"></script>
 </body>
 </html>
