feat: add adaptive

--- a/museum/index.html
+++ b/museum/index.html
@@ -254,10 +254,14 @@
                                 <img class="disabled" src="assets/images/svg/start-m.svg" alt="Start">
                             </button>
                             <input type="range" value="53.5" min="0" max="100" step="1" class="move-line">
+                            <input type="range" value="40" min="0" max="100" step="1" class="move-line__adaptive-1024">
+                            <input type="range" value="31" min="0" max="100" step="1" class="move-line__adaptive-768">
+                            <input type="range" value="40" min="0" max="100" step="1" class="move-line__adaptive-420">
                             <button class="microphone">
                                 <img class="volume current-volume" src="assets/images/svg/mircophone.svg" alt="Volume">
                             </button>
                             <input type="range" value="43" min="0" max="100" class="volume-line">
+                            <input type="range" value="40" min="0" max="100" class="volume-line__adaptive-768">
                             <button class="full">
                                 <img src="assets/images/svg/full.svg" alt="Full screen">
                             </button>
@@ -566,8 +570,17 @@
                                 <a href="mailto:info@louvre.fr" target="_blank">info@louvre.fr</a>
                             </div>
                         </div>
-                        <div class="contacts-map">
+                        <div class="contacts-map map-1">
                             <img src="assets/images/png/map.png" alt="Contacts map">
+                        </div>
+                        <div class="contacts-map map-2">
+                            <img src="assets/images/png/map-1024.png" alt="Contacts map">
+                        </div>
+                        <div class="contacts-map map-3">
+                            <img src="assets/images/png/map-768.png" alt="Contacts map">
+                        </div>
+                        <div class="contacts-map map-4">
+                            <img src="assets/images/png/map-420.png" alt="Contacts map">
                         </div>
                     </div>
                 </div>
@@ -589,10 +602,10 @@
                         </div>
                         <nav class="container-navigation">
                             <ul class="navigation-container">
-                                <li class="navigation-container__item welcom"><a href="#Visiting">Visiting</a></li>
-                                <li class="navigation-container__item visiting"><a href="#Explore">Explore</a></li>
-                                <li class="navigation-container__item explore"><a href="#Video">Video</a></li>
-                                <li class="navigation-container__item vidio"><a href="#Gallery">Gallery</a></li>
+                                <li class="navigation-container__item visiting"><a href="#Visiting">Visiting</a></li>
+                                <li class="navigation-container__item explore"><a href="#Explore">Explore</a></li>
+                                <li class="navigation-container__item video"><a href="#Video">Video</a></li>
+                                <li class="navigation-container__item gallery"><a href="#Gallery">Gallery</a></li>
                                 <li class="navigation-container__item tickets"><a href="#Tickets">Tickets</a></li>
                                 <li class="navigation-container__item contacts"><a href="#Contacts">Contacts</a></li>
                             </ul>
